[tool.poetry]
name = "information-retrieval"
version = "0.0.0"
description = ""
license = "CC-BY-NC-SA-4.0"
authors = ["Yuwang Cai <mrcaidev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"
pandas = "^2.1.3"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
ipykernel = "^6.26.0"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
